# VoxLattice

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  grype-gate.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  container.yml  dependency-review.yml  gpu.yml  release-build.yml  scorecard.yml  security.yml
benchmarks/: load.py
deploy/: .env.example  docker-compose.mtls.yml  docker-compose.tls.yml  docker-compose.yml
deploy/helm/voxlattice/: .helmignore  Chart.yaml  README.md  values-data-muc.yaml  values.yaml
deploy/helm/voxlattice/templates/: NOTES.txt  _helpers.tpl  certificate-server.yaml  deployment.yaml  ingressroute.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret-auth.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: architecture.md  benchmarking.md  configuration.md  kubernetes.md  livekit.md  operations.md  protocol.md  security.md
docs/adr/: 0001-pytorch-cuda-streaming.md
examples/grpc-client/: client.py
examples/livekit-agent/: .env.example  README.md  agent.py  pyproject.toml
models/: README.md  manifest.lock.json
proto/fastenhancer/v1/: enhancement.proto
services/fastenhancer-server/: Dockerfile  README.md  pyproject.toml
services/fastenhancer-server/src/fastenhancer_server/: __init__.py  audio.py  health.py  main.py  metrics.py  model.py  pipeline.py  scheduler.py  self_test.py  service.py  session.py  settings.py
tests/: fakes.py  test_denoise_check.py  test_gpu_model.py  test_grpc_service.py  test_livekit_contract.py  test_manifest_and_audio.py  test_model_fetch.py  test_model_state.py  test_plugin.py  test_settings_and_security.py  test_timeline.py
tools/: __init__.py  check_docs.py  check_proto.py  clean.py  collect_validation.py  denoise_check.py  fetch_fastenhancer.py  generate_proto.py  vendor_fastenhancer.py  verify_model.py
