[project]
name = "voxlattice-livekit-agent-example"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "livekit-agents==1.6.6",
  "livekit-plugins-fastenhancer",
  "python-dotenv==1.2.2",
]

[tool.uv.sources]
livekit-plugins-fastenhancer = { path = "../../packages/livekit-plugins-fastenhancer", editable = true }

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"
