[project]
name = "fastenhancer-server"
version = "0.1.0"
description = "CUDA-only FastEnhancer-B bidirectional gRPC service"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiohttp==3.14.2",
  "fastenhancer-protocol",
  "fastenhancer-upstream",
  "grpcio==1.70.0",
  "grpcio-health-checking==1.70.0",
  "prometheus-client==0.25.0",
  "pyyaml==6.0.3",
  "torch==2.10.0",
]
keywords = ["audio", "cuda", "grpc", "noise-suppression", "speech"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Documentation = "https://github.com/mayflower/VoxLattice/blob/main/docs/operations.md"
Issues = "https://github.com/mayflower/VoxLattice/issues"
Source = "https://github.com/mayflower/VoxLattice"

[project.scripts]
fastenhancer-server = "fastenhancer_server.main:main"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastenhancer_server"]
